test/fail/classes/self_get_property.lily
#[
SyntaxError: Use @<name> to get/set properties, not self.<name>.
    from self_get_property.lily:8:
]#

class Point(x: Integer, y: Integer) {
    var @x = x
    var @y = self.x
}
